--- a/modules/354/nav.adoc
+++ b/modules/354/nav.adoc
@@ -1,4 +1,4 @@
-.xref:index.adoc[]
+.xref:index.adoc[Jobst Krückeberg Bankruptcy (Under Development)]
 * xref:cover.adoc[]
 * xref:image2.adoc[]
 * xref:image3.adoc[]
